--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.8",
-    "@heroicons/vue": "^2.0.14",
+    "@headlessui/vue": "^1.7.9",
+    "@heroicons/vue": "^2.0.15",
     "@nuxtjs/i18n": "next",
     "@pinia/nuxt": "^0.4.6",
     "@vueuse/core": "^9.12.0",
@@ -23,27 +23,27 @@
     "markdown-it-prism": "^2.3.0",
     "pinia": "^2.0.30",
     "prism-themes": "^1.9.0",
-    "vee-validate": "^4.7.3",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
     "vue-gtag": "^2.0.1",
     "windplus": "^0.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.1",
+    "@antfu/eslint-config": "^0.35.2",
     "@babel/core": "^7.20.12",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@iconify/json": "^2.2.15",
+    "@iconify/json": "^2.2.20",
     "@nuxt/content": "^2.4.3",
     "@nuxtjs/fontaine": "^0.2.4",
-    "@nuxtjs/google-fonts": "^3.0.0-1",
+    "@nuxtjs/google-fonts": "3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.0",
+    "@storybook/builder-vite": "^0.4.1",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.16",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -52,12 +52,12 @@
     "@tailwindcss/typography": "^0.5.9",
     "@vueuse/nuxt": "^9.12.0",
     "babel-loader": "^9.1.2",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "husky": "^8.0.3",
-    "nuxt": "^3.1.1",
-    "nuxt-icon": "^0.2.10",
-    "swiper": "^9.0.1",
-    "tailwindcss": "^3.2.4",
+    "nuxt": "^3.2.0",
+    "nuxt-icon": "^0.2.11",
+    "swiper": "^9.0.4",
+    "tailwindcss": "^3.2.6",
     "vue-loader": "^17.0.1"
   }
 }
